--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@400;500;700&display=swap" rel="stylesheet">
     
-    <title>Local Shopping</title>
+    <title>CityShoppa</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
